fix: add overflow-x: hidden of all

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,6 +39,7 @@
   box-sizing: border-box;
   text-size-adjust: none;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 h1,
